Style:Ensure Footer always stays at bottom of the page(help from stack overflow). Add images to individual recipes from place holder or user inputted images

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,6 +4,10 @@ body {
     font-family: 'Bitter', sans-serif;
     background-color: #fafafa;
     color: #878e76;
+    height: 100vh;
+    margin: 0;
+    display:flex; 
+    flex-direction:column;
 }
 
 :where(h1, h2, h3, h4, h5, h6){
@@ -64,6 +68,16 @@ body {
     color: #878e76;
 }
 
+/* --- Jumbotron  --- */
+
+.jumbotron {
+    width: 100%;
+}
+
+
+.hero-slogan {
+    margin-bottom: 0;
+}
 
 
 /* --- Three reasons to sign up  --- */
@@ -90,4 +104,8 @@ body {
     }
 }
 
+
+footer {
+    margin-top: auto;
+}
 
